IE svg overflow fix

--- a/css/main.css
+++ b/css/main.css
@@ -477,6 +477,7 @@ body.cityPage #graphContainer{
 }
 .mapQuestion #plotContainer svg{
 	/*cursor: pointer;*/
+	overflow: hidden;
 }
 #zoomOut{
     position: absolute;
